--- a/app/styles/app/mediaqueries.styl
+++ b/app/styles/app/mediaqueries.styl
@@ -29,7 +29,7 @@
         display block
 
     #content-docs
-        margin-left 1.5em
+        margin-left 0
 
     figcaption.about-scoop
         display none
